--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,32 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.board {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: #f5f5f5;
+}
+
+#green {
+  background-color: #9BDD7C;
+  width: 10px;
+  height: 75px;
+  color:#9BDD7C ;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+#blue {
+  background-color:#6972C3;
+  width: 10px;
+  height: 75px;
+  color:#6972c3 ;
+  margin-top: 10px;
 }
