--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.page{
+    background-color: #eaeaea;
+}
+
 .form {
     display: flex;
     justify-content: center;
@@ -11,15 +15,29 @@
 }
 
 .form-body {
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
     margin-top: 25px;
     text-align: left;
     background-color: white;
     border-radius: 20px;
     padding: 20px;
     width: 364px;
-    height: 317px;
+    height: 100vh;
 }
 
+.formContainer{
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    gap: 10px;
+}
+
+#forgot{
+    float: left;
+    position: relative;
+}
 .form-body span {
     color: #346BD5;
     font-style: normal;
@@ -36,7 +54,7 @@ input {
     right: 0;
     top: 0;
     margin-top: 10px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     height: 40px;
     width: 362px;
 }
@@ -88,12 +106,17 @@ label {
     height: 40px;
     width: 362px;
     margin-top: 20px;
+    cursor: pointer;
 }
 
-.para p {
+.login{
+    margin-top: 0;
+}
+
+/* .para p {
     height: 40px;
     width: 362px;
-}
+} */
 
 #register {
     color: #346BD5
@@ -159,7 +182,7 @@ label {
     position: absolute;
     flex-wrap: wrap;
     left: 370px;
-    top: 760px;
+    /* top: 760px; */
 }
 
 #header {
@@ -193,7 +216,7 @@ label {
     justify-content: space-between;
     flex-wrap: wrap; */
     left: 340px;
-    top: 820px;
+    /* top: 820px; */
     position: absolute;
 }
 
@@ -227,6 +250,16 @@ label {
     background-color: #f5f5f5;
 }
 
+
+.main2{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    background-color: #f5f5f5;
+  }
+
 #featured p {
     font-size: 24px;
     font-weight: 700;
@@ -254,7 +287,7 @@ label {
     display: flex;
     position: absolute;
     left: 340px;
-    top: 990px;
+    top: 282px;
     margin-left: 16px;
     border-radius: 20px;
     padding: 20px 20px;
@@ -274,7 +307,7 @@ label {
     flex-direction: column;
     position: absolute;
     left: 340px;
-    top: 1360px;
+    
     margin-left: 16px;
     padding: 20px 20px;
 }
@@ -290,6 +323,7 @@ label {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
+    top: 356px;
 }
 
 #products {
@@ -303,6 +337,7 @@ label {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
+    top: 356px;
 }
 
 #lChart {
@@ -357,3 +392,4 @@ label {
     top: 50px;
     position: absolute;
 }
+
